favourites page and normal search work is going on

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.3
+  flutter_dotenv: ^5.0.2
   flutter_localizations:
     sdk: flutter
   geolocator: ^7.7.1
@@ -34,3 +35,4 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+    - .env
