--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   geolocator: ^7.7.1
   http: ^0.13.4
   shared_preferences: ^2.0.8
+  shimmer: ^2.0.0
+  
 
 dev_dependencies:
   flutter_test:
