--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^0.23.0+1
+  font_awesome_flutter: ^9.2.0
   geolocator: ^7.7.1
   http: ^0.13.4
   shared_preferences: ^2.0.8
