--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,18 +17,33 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^0.23.0+1
-  font_awesome_flutter: ^9.2.0
   geolocator: ^7.7.1
   http: ^0.13.4
   shared_preferences: ^2.0.8
   shimmer: ^2.0.0
+
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.3.1
   flutter_lints: ^1.0.0
+
+flutter_icons:
+  android: true
+  ios: false 
+  image_path: 'assets/logo.png'
+
+flutter_native_splash:
+  color: "#FFF8E1"
+  color_dark: "#263238"
+  image: 'assets/logo.png'
+  android: true
+  ios: false 
+  web: false 
+  fullscreen: true 
 
 flutter:
   uses-material-design: true
@@ -39,4 +54,5 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+    - assets/requests/
     - .env
