--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cached_network_image: ^3.1.0+1
+  fl_chart: ^0.40.2
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.3
@@ -53,6 +55,6 @@ flutter:
 
   assets:
     # Add assets from the images directory to the application.
-    - assets/images/
-    - assets/requests/
+    - assets/icon/
+    - assets/api/
     - .env
