--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  app_settings: ^4.1.1
   cached_network_image: ^3.1.0+1
   fl_chart: ^0.40.2
   flutter:
@@ -19,6 +20,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^0.23.0+1
+  geocoding: ^2.0.1
   geolocator: ^7.7.1
   http: ^0.13.4
   intl: ^0.17.0
