--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: weatherapp
-description: A Flutter project to check the weather data
+description: A project to demonstrate the weather data using openweathermap api
 
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.2+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -17,7 +17,6 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.3.3
   flutter_dotenv: ^5.0.2
-  flutter_svg: ^0.23.0+1
   geocoding: ^2.0.1
   geolocator: ^7.7.1
   google_fonts: ^2.1.1
