--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,11 @@ dependencies:
   fl_chart: ^0.40.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.3.3
+  flutter_bloc: ^8.1.1
   flutter_dotenv: ^5.0.2
   geocoding: ^2.0.1
-  geolocator: ^7.7.1
-  google_fonts: ^2.1.1
+  geolocator: ^9.0.2
+  google_fonts: ^3.0.1
   http: ^0.13.4
   intl: ^0.17.0
   shared_preferences: ^2.0.8
@@ -30,9 +30,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.2
-  flutter_native_splash: ^1.3.1
-  flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.10.0
+  flutter_native_splash: ^2.2.10+1
+  flutter_lints: ^2.0.1
 
 flutter_icons:
   android: true
